--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -52,7 +52,7 @@
         <mat-label>Bungie Name</mat-label>
         <input
           matInput
-          placeholder="Guardian#1234"
+          placeholder="Name or Name#1234"
           [(ngModel)]="nameInput"
           [ngModelOptions]="{ standalone: true }"
         />
