--- a/apps/party/src/styles.scss
+++ b/apps/party/src/styles.scss
@@ -23,10 +23,22 @@ $theme: mat.define-dark-theme(
 
 @include mat.typography-hierarchy($theme);
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .mat-mdc-radio-button {
   display: block;
 }
 
 .mat-mdc-card {
   padding: 0.5em 1em;
+}
+
+.mat-bottom-sheet-container {
+  padding: 0 !important;
+}
+.mdc-list-item--with-leading-avatar .mdc-list-item__start {
+  border-radius: 0 !important;
 }
