--- a/apps/party/src/app/app.component.scss
+++ b/apps/party/src/app/app.component.scss
@@ -79,6 +79,10 @@ ol li {
   flex: 1;
 }
 
+.mat-mdc-card-actions {
+  gap: 0.5em;
+}
+
 .code-block {
   background-color: #2f3136;
   border: solid 1px #202225;
@@ -93,4 +97,15 @@ form {
 
 mat-spinner {
   margin: auto;
+}
+
+.items {
+  display: flex;
+  gap: 6px;
+
+  .item-icon {
+    width: 50px;
+    height: 50px;
+    border: solid 1px #ddd;
+  }
 }
