--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -134,14 +134,9 @@
         Copy DIM Search
         <mat-icon aria-label="Copy DIM Search">content_copy</mat-icon>
       </button>
-      <button
-        [disabled]="true"
-        color="accent"
-        (click)="copySearch()"
-        mat-raised-button
-      >
+      <button [disabled]="true" color="accent" mat-raised-button>
         Equip Loadout
-        <mat-icon aria-label="Equip Loadout">flip_to_front</mat-icon>
+        <mat-icon aria-label="Coming Soon...">flip_to_front</mat-icon>
       </button>
     </mat-card-actions>
 
