--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -34,65 +34,85 @@
     </button>
   </div>
 
-  <form
-    (ngSubmit)="joinRoom()"
+  <mat-card
     *ngIf="
       (bungieAuth.hasValidAccessToken$ | async) && manifestState === 'ready'
     "
   >
-    <mat-form-field class="example-full-width">
-      <mat-label>Fireteam Code</mat-label>
-      <input
-        matInput
-        placeholder="ABCD"
-        [(ngModel)]="roomCode"
-        [ngModelOptions]="{ standalone: true }"
-        [readonly]="joinedRoom"
-        uppercase
-        maxlength="4"
-      />
-    </mat-form-field>
-    <button
-      color="primary"
-      type="submit"
-      mat-raised-button
-      *ngIf="!joinedRoom"
-      [disabled]="
-        (playerService.localPlayer$ | async) === null || roomCode.length !== 4
-      "
-    >
-      Join Fireteam
-      <mat-icon aria-label="Leave Fireteam">group</mat-icon>
-    </button>
-    <button
-      color="accent"
-      (click)="newRoom()"
-      mat-raised-button
-      *ngIf="!joinedRoom"
-      [disabled]="(playerService.localPlayer$ | async) === null"
-    >
-      Create Fireteam
-      <mat-icon aria-label="Create Fireteam">group_add</mat-icon>
-    </button>
-    <button
-      color="warn"
-      (click)="leaveRoom()"
-      mat-raised-button
-      *ngIf="joinedRoom"
-    >
-      Leave Fireteam
-      <mat-icon aria-label="Leave Fireteam">group_off</mat-icon>
-    </button>
-    <button
-      color="accent"
-      (click)="copyCode()"
-      mat-raised-button
-      *ngIf="joinedRoom"
-    >
-      Copy Fireteam Code
-      <mat-icon aria-label="Copy Fireteam Code">content_copy</mat-icon>
-    </button>
-  </form>
+    <mat-card-content>
+      <mat-card-title *ngIf="joinedRoom">{{
+        showCode ? roomCode : '****'
+      }}</mat-card-title>
+      <mat-form-field *ngIf="!joinedRoom" class="example-full-width">
+        <mat-label>Join Room Code</mat-label>
+        <input
+          matInput
+          placeholder="ABCD"
+          [(ngModel)]="roomCode"
+          [ngModelOptions]="{ standalone: true }"
+          [readonly]="joinedRoom"
+          maxlength="4"
+          type="password"
+        />
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button
+        color="primary"
+        (click)="joinRoom()"
+        mat-raised-button
+        *ngIf="!joinedRoom && roomCode.length > 0"
+        [disabled]="
+          (playerService.localPlayer$ | async) === null || roomCode.length !== 4
+        "
+      >
+        Join Room
+        <mat-icon aria-label="Leave Fireteam">group</mat-icon>
+      </button>
+      <button
+        color="accent"
+        (click)="newRoom()"
+        mat-raised-button
+        *ngIf="!joinedRoom && roomCode.length < 1"
+        [disabled]="(playerService.localPlayer$ | async) === null"
+      >
+        New Room
+        <mat-icon aria-label="Create Fireteam">group_add</mat-icon>
+      </button>
+      <button
+        color="primary"
+        (click)="showCode = !showCode"
+        mat-raised-button
+        *ngIf="joinedRoom"
+      >
+        {{ showCode ? 'Hide' : 'Show' }} Room Code
+        <mat-icon aria-label="Show Room Code" *ngIf="!showCode"
+          >visibility</mat-icon
+        >
+        <mat-icon aria-label="Hide Room Code" *ngIf="showCode"
+          >visibility_off</mat-icon
+        >
+      </button>
+      <button
+        color="accent"
+        (click)="copyCode()"
+        mat-raised-button
+        *ngIf="joinedRoom"
+      >
+        Copy Room Code
+        <mat-icon aria-label="Copy Fireteam Code">content_copy</mat-icon>
+      </button>
+      <button
+        color="warn"
+        (click)="leaveRoom()"
+        mat-raised-button
+        *ngIf="joinedRoom"
+      >
+        Leave Room
+        <mat-icon aria-label="Leave Fireteam">group_off</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
 
   <mat-spinner *ngIf="manifestState === 'loading'"></mat-spinner>
 
@@ -100,18 +120,34 @@
     Error loading Destiny Manifest
   </div>
 
-  <mat-card class="section" *ngIf="manifestState === 'ready' && joinedRoom">
+  <mat-card
+    class="section"
+    *ngIf="
+      (bungieAuth.hasValidAccessToken$ | async) &&
+      manifestState === 'ready' &&
+      joinedRoom
+    "
+  >
     <mat-card-header>
-      <mat-card-title>SRL²</mat-card-title>
+      <mat-card-subtitle
+        >{{
+          currentLoadout.length ? 'Generated ' + (lastLoadout | timeAgo) : ''
+        }}
+      </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div class="items">
-        <img
+        <div
           *ngFor="let item of currentLoadout"
-          [src]="'https://bungie.net' + item.displayProperties.icon"
+          class="item"
           [title]="item.displayProperties.name"
-          class="item-icon"
-        />
+        >
+          <img
+            [src]="'https://bungie.net' + item.displayProperties.icon"
+            class="item-icon"
+          />
+          <div class="item-name">{{ item.displayProperties.name }}</div>
+        </div>
       </div>
     </mat-card-content>
 
@@ -135,8 +171,8 @@
         <mat-icon aria-label="Copy DIM Search">content_copy</mat-icon>
       </button>
       <button [disabled]="true" color="accent" mat-raised-button>
-        Equip Loadout
-        <mat-icon aria-label="Coming Soon...">flip_to_front</mat-icon>
+        Equip Loadout (Coming Soon™)
+        <mat-icon aria-label="Equip Loadout">flip_to_front</mat-icon>
       </button>
     </mat-card-actions>
 
@@ -145,8 +181,27 @@
     </mat-card-footer>
   </mat-card>
 
-  <div class="section" *ngIf="manifestState === 'ready' && joinedRoom">
-    <h2>Guardians</h2>
+  <div
+    class="section"
+    *ngIf="
+      (bungieAuth.hasValidAccessToken$ | async) &&
+      manifestState === 'ready' &&
+      joinedRoom
+    "
+  >
+    <h2>Fireteam</h2>
+    <form (ngSubmit)="addManualPlayer()">
+      <mat-form-field class="example-full-width">
+        <mat-label>Bungie Name</mat-label>
+        <input
+          matInput
+          placeholder="Name or Name#1234"
+          [(ngModel)]="nameInput"
+          [ngModelOptions]="{ standalone: true }"
+        />
+      </mat-form-field>
+      <button color="primary" type="submit" mat-raised-button>Add</button>
+    </form>
     <div class="player-cards">
       <destiny-player
         *ngFor="let player of playerService.players$ | async; index as i"
@@ -179,13 +234,20 @@
     </div>
   </div>
 
-  <div class="section" *ngIf="manifestState === 'ready' && joinedRoom">
-    <h2>Options</h2>
+  <div
+    class="section"
+    *ngIf="
+      (bungieAuth.hasValidAccessToken$ | async) &&
+      manifestState === 'ready' &&
+      joinedRoom
+    "
+  >
+    <h2>Loadout Options</h2>
 
     <div class="option-cards">
       <mat-card>
         <mat-card-header>
-          <mat-card-title>Exotics</mat-card-title>
+          <mat-card-title>Require Exotic</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <mat-radio-group
@@ -204,7 +266,18 @@
 
       <mat-card>
         <mat-card-header
-          ><mat-card-title>Collections</mat-card-title></mat-card-header
+          ><mat-card-title>Require Ammo Type</mat-card-title></mat-card-header
+        >
+        <mat-card-content>
+          <mat-checkbox [(ngModel)]="requirePrimary">Primary</mat-checkbox
+          ><br />
+          <mat-checkbox [(ngModel)]="requireSpecial">Special</mat-checkbox>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card>
+        <mat-card-header
+          ><mat-card-title>Include Collections</mat-card-title></mat-card-header
         >
         <mat-card-content>
           <mat-checkbox
@@ -218,17 +291,6 @@
             (change)="updateCounts()"
             >Exotics</mat-checkbox
           >
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card>
-        <mat-card-header
-          ><mat-card-title>Require</mat-card-title></mat-card-header
-        >
-        <mat-card-content>
-          <mat-checkbox [(ngModel)]="requirePrimary">Primary</mat-checkbox
-          ><br />
-          <mat-checkbox [(ngModel)]="requireSpecial">Special</mat-checkbox>
         </mat-card-content>
       </mat-card>
 
