--- a/apps/party/src/app/app.component.scss
+++ b/apps/party/src/app/app.component.scss
@@ -103,9 +103,34 @@ mat-spinner {
   display: flex;
   gap: 6px;
 
+  .item {
+    width: 50px;
+    height: calc(50px + 50px / 5 + 3px);
+    box-sizing: border-box;
+    contain: layout paint style size;
+    border: solid 1px #ddd;
+    background-color: #ddd;
+    display: flex;
+    flex-direction: column;
+  }
+
   .item-icon {
     width: 50px;
     height: 50px;
-    border: solid 1px #ddd;
+  }
+
+  .item-name {
+    box-sizing: border-box;
+    color: #000;
+    display: flex;
+    font-size: calc(50px / 5);
+    height: calc(50px / 5 + 4px);
+    line-height: calc(50px / 5 + 4px);
+    margin-top: -1px;
+    overflow: hidden;
+    padding: 0 2px;
+    text-align: right;
+    white-space: pre;
+    width: 100%;
   }
 }
