--- a/apps/party/src/app/app.component.scss
+++ b/apps/party/src/app/app.component.scss
@@ -114,6 +114,10 @@ mat-spinner {
     flex-direction: column;
   }
 
+  .item-watermark {
+    position: absolute;
+  }
+
   .item-icon {
     width: 50px;
     height: 50px;
