"Join the room" verbiage

--- a/apps/party/src/app/player/player.component.html
+++ b/apps/party/src/app/player/player.component.html
@@ -51,7 +51,8 @@
         !player?.suspectProgressionDisabled
       "
     >
-      Vault inaccessible. Enable "Show my non-equipped Inventory" on Bungie.net
+      Vault inaccessible. Join the room or enable "Show my non-equipped
+      Inventory" on Bungie.net.
     </span>
     <span
       *ngIf="
@@ -60,7 +61,8 @@
         !player?.suspectNonEquippedDisabled
       "
     >
-      Collections inaccessible. Enable "Show my progression" on Bungie.net
+      Collections inaccessible. Join the room or enable "Show my progression" on
+      Bungie.net
     </span>
     <span
       *ngIf="
@@ -69,8 +71,8 @@
         player?.suspectNonEquippedDisabled
       "
     >
-      Vault and Collections inaccessible. Enable "Show my non-equipped
-      Inventory" and "Show my progression" on Bungie.net
+      Vault and Collections inaccessible. Join the room or enable "Show my
+      non-equipped Inventory" and "Show my progression" on Bungie.net
     </span>
   </mat-card-content>
 
